--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello github.iotouch README.md
+<!doctype html>
+<html lang="ja">
+<head>
+<meta charset="utf-8">
+<title>テスト</title>
+</head>
+<body>
+<p>テストテスト</p>
+</body>
